@@ -1,5 +1,11 @@
 2007-10-30  Markus Deuling  <deuling@de.ibm.com>
 
+	* armnbsd-nat.c (arm_supply_gregset, fetch_register, store_register)
+	(store_regs): Use get_regcache_arch to get at the current architecture
+	by regcache.
+
+2007-10-30  Markus Deuling  <deuling@de.ibm.com>
+
 	* arm-linux-tdep.c (arm_linux_supply_gregset): Use get_regcache_arch
 	to get at the current architecture by regcache.
 
